2001-07-31  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-connection.c (impl_GDA_Connection_open): unref the
	GdaServerConnection if the connection attempt failed, thus not
	leaving the providers around with no clients connected to them

2001-07-24  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-recordset.c (impl_GDA_Recordset_moveNext,
	impl_GDA_Recordset_movePrev): new CORBA methods

	(impl_GDA_Recordset_move): removed

2001-07-21  Rodrigo Moya <rodrigo@gnome-db.org>

        * *.h: s/#if defined(__cplusplus).../G_BEGIN_END_DECLS

2001-07-15  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-connection.c (impl_GDA_Connection_openSchema): removed
	extra & in call to gda_error_to_exception, which was causing providers
	to core dump when NULL was returned from the ::open_schema method
	with no error attached to the connection

2001-07-14  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-connection.[ch] (gda_server_connection_add_listener):
	new method
	(gda_server_connection_remove_listener): new function
	(impl_GDA_Connection_addListener): implemented
	(impl_GDA_Connection_removeListener): implemented

2001-07-06  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-*.c: inform correctly of errors

	* gda-server-impl-factory.c: removed

2001-07-05  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-impl.[ch]: moved to gda-server.[ch]. GdaServerImpl
	class renamed to GdaServer

	* gda-server-impl-*.[ch]: moved all the implementation to the
	corresponding gda-server-*.[ch] file

	* gda-server-private.h: new file

2001-06-15  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-impl-connection.c (impl_GDA_Connection_open): moved
	the call to gda_server_connection_new from impl_GDA_Connection__create
	to this function (fixes bug #50565)

2001-06-07  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-connection.c (gda_server_connection_free): call
	gda_server_impl_stop if there are no more connections left,