@@ -8,7 +8,6 @@ gda_server_headers = \
 	gda-server-connection.h \
 	gda-server-command.h \
 	gda-server-error.h \
-	gda-server-field.h \
 	gda-server-recordset.h \
 	gda-server.h 
 
@@ -18,7 +17,6 @@ libgda_server_2_la_SOURCES = \
 	gda-server-command.c \
 	gda-server-connection.c \
 	gda-server-error.c \
-	gda-server-field.c \
 	gda-server-init.c \
 	gda-server-recordset.c \
 	gda-builtin-res.c \
