@@ -1,3 +1,7 @@
+2001-08-19  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* gda-server-field.[ch]: moved to gda-common
+
 2001-07-31  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* gda-server-connection.c (impl_GDA_Connection_open): unref the
